--- a/assets/css/developer.css
+++ b/assets/css/developer.css
@@ -1,15 +1,27 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
 .developer_section {
   background-color: #000000;
   padding: 60px 0px 100px;
-  /* Keywords */
-  /* Strings */
-  /* HTML tags */
-  /* Attributes */
-  /* Comments */
+}
+.developer_section .dev_api_images {
+  margin: 0 auto;
+  padding: 50px;
+}
+.developer_section .dev_api_images img {
+  width: 100%;
+  height: 100%;
 }
 .developer_section h3 {
   color: #ffffff;
-  font-size: 35px;
+  font-size: 40px;
+  font-weight: 700;
 }
 @media screen and (max-width: 992px) {
   .developer_section h3 {
@@ -20,6 +32,12 @@
   color: #3EAB90;
   font-size: 30px;
   padding-bottom: 40px;
+  font-weight: 400;
+}
+@media screen and (max-width: 992px) {
+  .developer_section h5 {
+    text-align: center;
+  }
 }
 .developer_section .dev_left {
   border-radius: 20px;
@@ -35,14 +53,25 @@
   background-color: #1A2D2C;
   padding: 25px;
   border-radius: 12px;
-  transition: all 0.6s ease;
+  border: solid 1px transparent;
   --border-angle: 0turn;
   --main-bg: conic-gradient(
       from var(--border-angle),
       #1A2C2A 0%,
       #1A2C2A 100%
       );
-  border: solid 1px transparent;
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  background-position: center center;
+  animation: bg-spin 8s linear infinite;
+}
+.developer_section .dev_left .dev_card:hover {
+  --border-angle: 0turn;
+  --main-bg: conic-gradient(
+      from var(--border-angle),
+      #1A2C2A 0%,
+      #1A2C2A 100%
+      );
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
@@ -54,52 +83,58 @@
   }
 }
 @media screen and (max-width: 992px) {
+  .developer_section .dev_left .dev_card:hover {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 992px) {
   .developer_section .dev_left .dev_card {
     text-align: center;
   }
 }
-.developer_section .dev_left .dev_card img {
-  width: 40px;
-  height: 40px;
+.developer_section .dev_left .dev_card .dev_card_logo {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.developer_section .dev_left .dev_card span {
+  width: 60px;
+  height: 60px;
   object-fit: contain;
   background-color: #3EAB90;
   padding: 10px;
   border-radius: 50%;
   margin-bottom: 10px;
 }
+.developer_section .dev_left .dev_card span img {
+  width: 100%;
+  height: 100%;
+}
 .developer_section .dev_left .dev_card h4 {
   font-size: 20px;
+  font-weight: 500;
   color: #3EAB90;
   padding-bottom: 10px;
+  color: #d7ba7d;
 }
 .developer_section .dev_left .dev_card p {
   color: #ffffff;
+  font-weight: 400;
   margin-bottom: 0px;
   transition: all 0.6s ease;
 }
-.developer_section .dev_right {
-  position: relative;
-}
-@media screen and (max-width: 992px) {
-  .developer_section .dev_right {
-    margin-top: 20px;
-  }
-}
-.developer_section .dev_right video {
-  width: 47vw;
-  height: 100%;
-}
-@media screen and (max-width: 992px) {
-  .developer_section .dev_right video {
-    width: 100%;
-    height: 100%;
-  }
+.developer_section .code-container {
+  white-space: pre; /* Preserve code formatting */
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0 auto;
+  text-align: left; /* Align text to the left */
+  max-width: 100%; /* Allow the code to wrap naturally */
 }
 .developer_section #typingEffect {
   color: #d7ba7d;
   border-top: 1px solid rgba(100, 116, 139, 0.3019607843);
-  padding-top: 20px;
-  padding: 10px;
   position: relative;
 }
 .developer_section #editor {
@@ -122,47 +157,56 @@
       #1A2C2A 100%
       );
   border: solid 1px transparent;
-  border-radius: 2em;
-  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+  border-radius: 1em;
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #f7c35f33, #3EAB90 99%, transparent);
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 4s linear infinite;
+  animation-delay: 0.5s;
+  min-height: auto;
+  height: 205px;
 }
 @keyframes bg-spin {
   to {
     --border-angle: 1turn;
   }
 }
-.developer_section .cursor {
-  display: inline-block;
-  width: 8px;
-  height: 16px;
-  background: #d4d4d4;
-  animation: blink 0.7s steps(1) infinite;
+.developer_section #editor .CodeMirror-scroll {
+  background-color: #1A2D2C !important;
 }
-@keyframes blink {
-  50% {
-    background: transparent;
-  }
+.developer_section #editor .CodeMirror-scroll .CodeMirror-gutter {
+  background-color: #1A2D2C !important;
+}
+.developer_section #editor .CodeMirror-scroll .cm-keyword {
+  color: #569CD6 !important;
+}
+.developer_section #editor .CodeMirror-scroll .cm-def {
+  color: #d4d4d4 !important;
+}
+.developer_section #editor .CodeMirror-scroll .CodeMirror-code {
+  color: #d4d4d4 !important;
+}
+.developer_section #editor .CodeMirror-scroll .cm-variable {
+  color: #569CD6 !important;
+}
+.developer_section #editor .CodeMirror-scroll .cm-string {
+  color: #CE9178 !important;
+}
+.developer_section #editor .CodeMirror-scroll .cm-number {
+  color: #B5CEA8 !important;
+}
+.developer_section #editor .CodeMirror-scroll .cm-property {
+  color: #d4d4d4 !important;
+}
+.developer_section .CodeMirror-gutters {
+  border-right: 1px solid rgba(100, 116, 139, 0.3019607843) !important;
+  background-color: rgba(100, 116, 139, 0.3019607843) !important;
+}
+.developer_section textarea {
+  display: none;
 }
 .developer_section .line {
   display: block;
-}
-.developer_section .keyword {
-  color: #569cd6;
-}
-.developer_section .string {
-  color: #ce9178;
-}
-.developer_section .tag {
-  color: #d7ba7d;
-}
-.developer_section .attribute {
-  color: #9cdcfe;
-}
-.developer_section .comment {
-  color: #6a9955;
-  font-style: italic;
 }
 .developer_section ul {
   padding: 0px;
