--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,3 +1,11 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
 .footer_section {
   background: linear-gradient(359.8deg, rgba(26, 50, 48, 0.46) 5.16%, rgba(62, 171, 144, 0.22) 99.83%);
   background-color: #000000;
@@ -24,6 +32,8 @@
 .footer_section .col-lg-4 p {
   color: #ffffff;
   padding: 20px 0px 10px;
+  font-weight: 400;
+  font-size: 16px;
 }
 @media screen and (max-width: 992px) {
   .footer_section .col-lg-4 p {
@@ -34,6 +44,9 @@
   color: #ffffff;
   text-decoration: none;
   padding-top: 10px;
+  font-size: 17px;
+  line-height: 19px;
+  font-weight: 400;
 }
 @media screen and (max-width: 992px) {
   .footer_section .col-lg-4 a {
@@ -54,6 +67,9 @@
 }
 .footer_section h5 {
   color: #ffffff;
+  font-size: 22px;
+  line-height: 24px;
+  font-weight: 500;
 }
 @media screen and (max-width: 992px) {
   .footer_section h5 {
@@ -70,19 +86,42 @@
 }
 .footer_section li a {
   color: #ffffff;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 36px;
   text-decoration: none;
+  transition: all 0.6s ease;
+}
+.footer_section li a:hover {
+  color: #F7C35F;
 }
 .footer_section .copy_rights {
   display: flex;
   justify-content: space-between;
   padding: 80px 0px 70px;
+  align-items: center;
 }
 .footer_section .copy_rights .copy_rights_1 {
   color: #ffffff;
 }
+.footer_section .copy_rights .copy_rights_1 p {
+  margin: 0;
+}
 .footer_section .copy_rights .copy_rights_1 ul li {
   display: inline-block;
   padding: 0px 5px;
+}
+.footer_section .copy_rights .copy_rights_1.fz_social_icon a {
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  background: #1A2C2A;
+  line-height: 35px;
+}
+.footer_section .copy_rights .copy_rights_1.fz_social_icon a:hover {
+  background: #F7C35F;
 }
 @media screen and (max-width: 992px) {
   .footer_section .copy_rights {
