--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -1,3 +1,11 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
 .fz_product_sec {
   position: relative;
   z-index: 0;
@@ -9,7 +17,7 @@
   flex-wrap: nowrap;
   overflow: hidden;
 }
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 1200px) {
   .fz_product_sec .fz_container {
     display: block;
   }
@@ -52,7 +60,7 @@
   align-items: center;
   height: 100vh;
   gap: 260px;
-  padding: 92px 100px;
+  padding: 0px 100px;
 }
 @media only screen and (max-width: 1600px) {
   .fz_product_sec .fz_container .fz_sub_container {
@@ -68,73 +76,108 @@
 @media only screen and (max-width: 1280px) {
   .fz_product_sec .fz_container .fz_sub_container {
     gap: 24px;
-    padding: 30px 16px;
+    padding: 30px 16px 76px 16px;
+    height: auto;
   }
 }
 @media only screen and (max-width: 720px) {
   .fz_product_sec .fz_container .fz_sub_container {
     display: block;
     gap: 16px;
+    height: auto;
   }
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content {
   position: relative;
   width: 620px;
 }
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 1200px) {
   .fz_product_sec .fz_container .fz_sub_container .fz_content {
     width: 100%;
   }
 }
-.fz_product_sec .fz_container .fz_sub_container .fz_content .fz_num {
-  padding-bottom: 16px;
-}
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_num h3 {
-  font-family: "Montserrat", sans-serif;
+  line-height: 100px;
   font-size: 128px;
   font-weight: 600;
   color: #ffffff;
 }
+@media screen and (max-width: 1200px) {
+  .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_num h3 {
+    font-size: 80px;
+  }
+}
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_title {
-  font-family: "Montserrat", sans-serif;
   font-size: 36px;
   font-weight: 700;
+  line-height: 49px;
   color: #F7C35F;
-  padding-bottom: 16px;
+  padding-bottom: 2px;
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_subtitle {
-  font-family: "Montserrat", sans-serif;
-  font-size: 36px;
-  font-weight: 700;
+  font-size: 26px;
+  font-weight: 200;
+  line-height: 26px;
   color: #3EAB90;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
+}
+@media screen and (max-width: 1200px) {
+  .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_subtitle {
+    line-height: 40px;
+  }
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_bank {
-  font-family: "Montserrat", sans-serif;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
   color: #ffffff;
-  padding-bottom: 32px;
-  line-height: 32px;
+  padding-bottom: 20px;
+  line-height: 30px;
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_desc {
-  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #ffffff;
-  padding-bottom: 32px;
+  padding-bottom: 26px;
   line-height: 26px;
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_btn button {
-  font-family: "Roboto";
+  background: #3EAB90;
+  color: #ffffff;
+  border-radius: 32px;
+  font-size: 16px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-end;
   font-size: 16px;
   font-weight: 400;
-  background-color: #3EAB90;
-  color: #ffffff;
-  padding: 14px 64px;
+  padding: 15px 20px;
   border-radius: 32px;
   border: none;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  width: 180px;
+}
+.fz_product_sec .fz_container .fz_sub_container .fz_content .fz_btn button svg {
+  animation: moveAnimation 2s linear infinite;
+}
+.fz_product_sec .fz_container .fz_sub_container .fz_content .fz_btn button:hover {
+  background-image: linear-gradient(180deg, #3eab90 0%, #003224 100%);
+}
+.fz_product_sec .fz_container .fz_sub_container .fz_content .fz_btn button .hero-join {
+  line-height: 1.5;
+  display: flex;
+  gap: 20px;
+  position: absolute;
+  bottom: -72%;
+  left: 35px;
+  flex-direction: column;
+  transition: bottom 0.5s;
+}
+.fz_product_sec .fz_container .fz_sub_container .fz_content .fz_btn button:hover .hero-join {
+  bottom: 12px;
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_img-sec {
   position: relative;
@@ -145,14 +188,22 @@
 .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img .image_1 {
   opacity: 0.3;
 }
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 1200px) {
   .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img .image_1 {
     width: 100%;
   }
 }
-.fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img img:last-child {
+.fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img img:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img object:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img svg:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img embed:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img video:last-child {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  min-width: 75%;
+  width: 75%;
+}
+@media only screen and (max-width: 1200px) {
+  .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img img:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img object:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img svg:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img embed:last-child, .fz_product_sec .fz_container .fz_sub_container .fz_img-sec .fz_img video:last-child {
+    width: 100%;
+    margin-top: 10px;
+  }
 }
