--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -1,3 +1,11 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
 /* PANELS */
 .panel__stack {
   --spacer: 20px;
@@ -20,6 +28,70 @@
   height: 41.625rem;
   will-change: transform;
   background-color: #1A2C2A;
+  box-shadow: 0px 0px 8px rgba(16, 106, 64, 0.3607843137);
+  --border-angle: 0turn;
+  --main-bg: conic-gradient(
+      from var(--border-angle),
+      #1A2C2A 0%,
+      #1A2C2A 100%
+      );
+  border: solid 1px transparent;
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  background-position: center center;
+  animation: bg-spin 12s linear infinite;
+}
+.panel__stack .panel__card.active {
+  --border-angle: 0turn;
+  --main-bg: conic-gradient(
+      from var(--border-angle),
+      #1A2C2A 0%,
+      #1A2C2A 100%
+      );
+  border: solid 1px transparent;
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+  background-position: center center;
+  animation: bg-spin 4s linear infinite;
+}
+@keyframes bg-spin {
+  to {
+    --border-angle: 1turn;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .panel__stack .panel__card {
+    grid-area: unset;
+    position: unset;
+    height: auto !important;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .panel__stack .panel__card {
+    height: 36rem;
+  }
+}
+
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
+.panel__stack .panel__card:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.panel__stack .panel__card:nth-child(2) {
+  animation-delay: 0.5s;
+}
+
+.panel__stack .panel__card:nth-child(3) {
+  animation-delay: 1s;
+}
+
+.panel__stack .panel__card:nth-child(4) {
+  animation-delay: 1.5s;
 }
 
 .panel__stack .panel__card.panel__card--one {
@@ -174,15 +246,24 @@
   align-items: center;
 }
 .panel .panel__options span {
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 36px;
   color: #ffffff;
   padding: 12px 0;
   transition: all 0.5s ease;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 1199px) {
+  .panel .panel__options {
+    display: none;
+  }
+}
 .panel .panel__stack .panel__card h2 {
   color: #ffffff;
   font-size: 36px;
+  font-weight: 600;
+  line-height: 32px;
   margin-bottom: 30px;
 }
 .panel .panel__stack .panel__card .nav.nav-pills {
@@ -208,8 +289,38 @@
   display: flex;
   gap: 40px;
 }
+@media screen and (max-width: 767px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card {
+    flex-wrap: wrap;
+  }
+}
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay {
   border-radius: 8px;
+  min-width: 30%;
+  background: #fff;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay {
+    width: calc(50% - 20px);
+  }
+}
+.panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay svg {
+  width: 100%;
+  height: 270px !important;
+}
+.panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay img {
+  width: 100%;
+  height: 270px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay img {
+    width: 100%;
+  }
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div {
   padding: 20px;
@@ -220,14 +331,18 @@
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div h3 {
   color: #F7C35F;
   font-size: 20px;
+  font-weight: 700;
+  line-height: 36px;
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div p {
   color: #ffffff;
   font-size: 18px;
+  font-weight: 400;
   line-height: 25px;
   min-height: 75px;
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div a {
+  display: none;
   color: #3EAB90;
   font-size: 18px;
   text-decoration: none;
