--- a/assets/css/marquee.css
+++ b/assets/css/marquee.css
@@ -1,3 +1,11 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
 #logo_marquee {
   --space: 5px;
   background-color: #1A2C2A;
