--- a/assets/css/newsletter.css
+++ b/assets/css/newsletter.css
@@ -1,3 +1,11 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
 .newsletter_section {
   background-color: #000000;
   text-align: center;
@@ -18,6 +26,7 @@
 @media screen and (max-width: 992px) {
   .newsletter_section h3 {
     font-size: 50px;
+    line-height: 55px;
   }
 }
 .newsletter_section h5 {
@@ -28,6 +37,12 @@
   text-align: center;
   margin-bottom: 0px;
   padding-top: 15px;
+}
+@media screen and (max-width: 992px) {
+  .newsletter_section h5 {
+    font-size: 30px;
+    line-height: 40px;
+  }
 }
 .newsletter_section .input-group {
   width: 636.71px;
@@ -43,6 +58,7 @@
 @media screen and (max-width: 992px) {
   .newsletter_section .input-group {
     width: auto;
+    margin-top: 40px;
   }
 }
 .newsletter_section .input-group button {
